--- a/Transport Management/TransportCompany/pom.xml
+++ b/Transport Management/TransportCompany/pom.xml
@@ -6,6 +6,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>TransportCompany Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 	<dependencies>
 
 		<dependency>
@@ -46,7 +50,7 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        </dependencies>
 	<build>
 		<finalName>TransportCompany</finalName>
 	</build>
